  enabled at startup.  Enabling ~global-auto-revert-mode~ now disables
  this mode.  38a916f555..de766d2968 et al.

- Simplified ~magit-wip-mode~.  This involves removing all other wip
  modes (which allowed using only a subset of the protection offered
  by ~magit-wip-mode~) and using the new ~magit-before-change-functions~
  and ~magit-after-apply-functions~ hooks.  98ef107037..fa629ad5b5

- Added experimental support for calling Lisp hooks from Git hooks.

- Replaced option ~magit-section-visibility-indicator~ (singluar) with
  new option ~magit-section-visibility-indicators~ (plurarl) to better
  support emacs sessions that have both terminal and gui frames.
  2d8f43e681

- ~mouse-set-point~ is now remapped to Magit's variant.  fa5906621a

- ~magit-autoloads~ is now loaded exactly once.  3d1a008f18

- Fixed custom type of ~magit-blame-styles~.  84c5c8c8c6

- Fixes regression in ~magit-rebase-autosquash~.  It no longer excluded
  the merge-base.  54e460a701

- A few hook functions were not autoloaded.  #5464

- Some refinements were calculated for the diff in the commit
  message buffer, despite not actually being displayed.  #5483

- Commands for showing logs for wip branches were no longer displayed
  in the log menu, despite ~magit-wip-mode~ being enabled.  #5488

* v4.4.2    2025-10-06

- Addressed harmless compiler warning.

* v4.4.1    2025-10-06

- Added new option ~magit-log-trailer-labels~.  #5432

- Added new command ~magit-delete-shelved-branch~.  31c0ae17d3

- Added new variable ~magit-save-repository-buffers-predicate~.  #5450

- Fixed saving the value of the menus ~magit-diff~, ~magit-log~,
  ~magit-diff-refresh~ and ~magit-log-refresh~.  c7ba53b4b4

- A form from the ~cond-let~ library made it into the autoloads file,
  where that library isn't being loaded.  #5451

- ~magit-revert-rev-file-buffer~ did not respect a value of ~nil~ for
  ~enable-local-variables~.  5eb31a419a

- Improved commands for jumping to specific sections in revision